5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1679_1103.log
== TEST (2019-04-25 16:55:26) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,b)

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:55:52) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a",",b)

-- ERROR:
File "XXXX", line 6
    print(x,"pertence ao intervalo", a",",b)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:55:58) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

-- ERROR:
File "XXXX", line 6
    print(x,"pertence ao intervalo", a",",b)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:58:43) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:58:50) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- EXECUTION TIME:
0.17834
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:58:53) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:59:07) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:02:45) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>a and x<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:03:28) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x=>a and x=<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- EXECUTION TIME:
0.120615
-- ERROR:
  File "/home/codebench/codes/1679/1103/main.py", line 5
    if (x=>a and x=<b):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:03:29) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x=>a and x=<b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- ERROR:
File "XXXX", line 5
    if (x=>a and x=<b):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:04:26) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>=a and x<=b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- EXECUTION TIME:
0.146789
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:04:27) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>=a and x<=b):
	print(x,"pertence ao intervalo", a,",",b)

elif (b<=a):
	print("Entradas a e b invalidas")

else:
	print(x,"nao pertence ao intervalo", a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:08:14) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>=a and x<=b):
	print(x," pertence ao intervalo ", a,", ",b)

elif (b<=a):
	print("Entradas ",a," e ",b," invalidas")

else:
	print(x," nao pertence ao intervalo ", a,", ",b)
	
-- OUTPUT:
2.0  nao pertence ao intervalo  3.0 ,  4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:08:19) 
-- CODE:
x= float(input("Insira o numero de x:"))
a= float(input("Insira o primeiro intervalo:"))
b= float(input("Insira o segundo intervalo:"))

if (x>=a and x<=b):
	print(x," pertence ao intervalo ", a,", ",b)

elif (b<=a):
	print("Entradas ",a," e ",b," invalidas")

else:
	print(x," nao pertence ao intervalo ", a,", ",b)
	
-- EXECUTION TIME:
0.181286
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao intervalo  3.0 ,  4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5  e  3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo  1.1 ,  22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
